<resources>
    <string name="safecenter">乐安全</string>
    <string name="charge_safe">吸费克星</string>
    <string name="charge_safe_summery">防止流量吸费、短信吸费和电话吸费</string>
    <string name="permission_control">隐私保护</string>
    <string name="permission_control_summery">防止隐私信息被偷窥和收集</string>
    <string name="black_list">骚扰拦截</string>
    <string name="black_list_summery">智能拦截骚扰电话和垃圾短信</string>
    <string name="anti_virus">病毒查杀</string>
    <string name="anti_virus_summery">查杀手机恶意软件</string>
    <string name="anti_theft">手机防盗</string>
    <string name="anti_theft_summery">远程数据备份,销毁,锁定,报警和定位</string>
    <string name="privacy_safe">私密空间</string>
    <string name="privacy_safe_summery">设置您的手机私密空间</string>
    <string name="privacy_modes">私密模式</string>
    <string name="privacy_modes_summery">设置儿童模式、访客模式</string>
    <string name="safe_log">安全日志</string>
    <string name="safe_log_summery">记录安全事件</string>
    <string name="trust_apps">信任应用</string>
    <string name="trust_apps_summery">不被乐安全检测的应用软件</string>
    <string name="against_peep_log">防偷窥日志</string>
    <string name="charge_safe_log">防吸费日志</string>
    <string name="against_harass_log">骚扰拦截日志</string>
    <string name="against_peep_log_summary">进入查看隐私日志</string>
    <string name="charge_safe_log_summary">进入查看资费日志</string>
    <string name="smallTools">小工具</string>
    <string name="nullStr" />
    <string name="about">关 于</string>
    <string name="about1">"安全-----保护您的隐私和资费安全

版 本：乐安全3.0；适用于乐Phone
开发者：联想（中国）研究院

简 介："</string>
    <string name="about2">安全是联想研究院开发的一款系统级内核防御，集防偷窥、防吸费、防骚扰、手机防盗、防病毒等功能于一身的智能手机安全软件，为您的移动互联网生活带来贴心的呵护！</string>
    <string name="about3">主要功能介绍：</string>
    <string name="about4">"、 防吸费
防吸费功能包括防流量吸费，防短信吸费和防电话吸费。
 (1) 防流量吸费：利用流量防火墙来限制特定应用使用移动数据网络上网，尤其针对那些大流量的应用和后台偷偷上网的应用，以保护用户的流量不超标，避免产生大量流量费用。
 (2) 防短信吸费：拦截所有应用的后台发送短信行为，让您彻底远离短信吸费的风险。
 (3) 防电话吸费：拦截所有应用的后台拨打电话行为，让您彻底远离电话吸费的风险。

 2、 防偷窥
防偷窥功能可阻止各种可疑应用偷窥和收集用户的联系人，短信，日程，浏览器历史记录和位置等隐私信息，更可阻止恶意应用在后台进行录音，摄像以及监控用户电话等恶意行为，让用户彻底远离类似于X-卧底等已知和未知的各类木马软件的窃听和偷窥风险。

 3、 防骚扰
防骚扰功能可智能拦截骚扰电话和垃圾短信，支持用户举报黑名单电话和短信号码。用户可更新网络黑名单和智能短信过滤规则库，已达到最好的骚扰拦截效果。

 4、 防病毒（mini-lephone无此功能）
多引擎智能查杀各种手机病毒和木马，实时保护您的手机安全。

 5、 手机防盗
手机防盗功能保护您的手机在丢失后将损失降低到最低程度。通过发送特定短信，远程控制您丢失的手机：包括销毁隐私信息(联系人、通话记录、短信息、日程、浏览器历史记录、邮件、PUSH帐号)，备份联系人和短信息，锁定手机，发报警音，以及定位追踪找回。

 6、 私人模式
在正常模式下，私密联系人及其通讯信息会被隐藏，当您临时离开手机时，保护您的私密通讯信息不会被他人看见。只有在正确输入安全中心密码进入私人模式后，才可见到您的私密联系人，私密通话记录和私密短信等通讯信息。私人模式在锁屏后会自动退出到正常模式。

 7、 儿童模式
儿童模式开启后，可自动启用离线模式和禁用特定应用。
 (1) 自动启用离线模式: 防手机辐射，防止儿童误打电话，造成资费和骚扰他人的现象
 (2) 应用禁用:屏蔽特定应用（在桌面消失），防止手机上的数据被儿童误操作破坏；禁止儿童使用不适合孩子的应用。

 8、 访客模式（mini-lephone无此功能）
访客模式是被他人临时使用时，开启该模式可自动隐藏您的所有通讯信息和特定应用，以保护您的隐私和数据安全。

 9、 安全日志
安全日志是记录防吸费，防偷窥，防骚扰等功能产生的安全事件，您还可对这些安全事件进行举报，以更好的提升联想对用户的安全服务。"</string>
    <string name="privacy_mode">私人模式</string>
    <string name="privacy_mode_disable">查看私密通讯信息</string>
    <string name="privacy_mode_enable">已开启，锁屏后自动退到正常模式</string>
    <string name="privacy_mode_set">添加私密联系人</string>
    <string name="child_mode">儿童模式</string>
    <string name="child_mode_set">开启/关闭离线模式、设置要禁用的应用</string>
    <string name="guest_mode">访客模式</string>
    <string name="guest_mode_set">访客模式设置</string>
    <string name="guest_mode_summary">设置儿童模式、访客模式</string>
    <string name="guest_mode_enable">所有通讯信息和指定应用已被隐藏</string>
    <string name="guest_mode_disable">隐藏所有通讯信息和指定应用</string>
    <string name="plan_mode">开启离线模式</string>
    <string name="hide_app">应用禁用（最多禁用10个应用）</string>
    <string name="child_mode_function">选择在使用儿童模式时启用哪些功能</string>
    <string name="plan_mode_closed">儿童使用时开启离线模式</string>
    <string name="hide_app_closed">儿童使用时开启应用禁用功能</string>
    <string name="hide_app_summary">请选择儿童模式下要禁用的应用</string>
    <string name="open_child_mode">进入儿童模式</string>
    <string name="open_child_mode_tips">进入儿童模式之前是否退出乐安全？</string>
    <string name="switch_to_child_mode">已切换至儿童模式</string>
    <string name="switch_to_privacy_mode">已切换至私人模式</string>
    <string name="to_privacy_mode_set">私人模式已开启，可查看私密通讯录和短信</string>
    <string name="switch_to_guest_mode">已切换至访客模式</string>
    <string name="against_theft">手机防盗</string>
    <string name="theft">手机防盗</string>
    <string name="theft_summary">远程数据备份、销毁、锁定手机、报警和定位</string>
    <string name="stop_against_theft">手机防盗已禁用</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="opend">已开启</string>
    <string name="closed">已关闭</string>
    <string name="select_all">全选</string>
    <string name="on_all">全部允许</string>
    <string name="off_all">全部禁止</string>
    <string name="display_all">全部显示</string>
    <string name="hide_all">全部隐藏</string>
    <string name="info_all">全部提示</string>
    <string name="set">设置</string>
    <string name="help">帮助</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="change">修改</string>
    <string name="modify_black">修改黑名单</string>
    <string name="nodate">没有非系统应用申请该权限</string>
    <string name="pwdset">设置乐安全密码</string>
    <string name="pwdmodify">修改乐安全密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm_password">再次确认密码</string>
    <string name="confirm_new_password">再次确认新密码</string>
    <string name="pwdset_rule">请输入密码(6位数字)</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_privacy_pwd">请输入6位乐安全密码</string>
    <string name="pwd_error">密码错误</string>
    <string name="pwd_error_tips">密码错误,请重新输入</string>
    <string name="error_tips_null">输入密码为空,请重新输入</string>
    <string name="error_tips_format">输入格式有误！</string>
    <string name="error_tips_different">两次输入不一样！</string>
    <string name="set_success">密码设置成功，请牢记密码！如遗忘可在设置中向安全手机号发送一条短信取回。</string>
    <string name="change_success">密码修改成功！</string>
    <string name="reading">读取中... ...</string>
    <string name="wait">请稍候</string>
    <string name="read">读取</string>
    <string name="use">使用</string>
    <string name="function">功能</string>
    <string name="limit">限制应用</string>
    <string name="app_can">下列应用可</string>
    <string name="to_manage1">，请禁用您不信任的应用，以确保隐私安全</string>
    <string name="to_manage2">，请您管理以确保资费安全</string>
    <string name="to_manage3">提示：某些应用被禁用后,可能会导致异常退出。</string>
    <string name="contact">联系人和通话记录</string>
    <string name="get_contact">获取联系人和通话记录信息</string>
    <string name="sms">短信</string>
    <string name="get_sms">获取短信息</string>
    <string name="calender">日程</string>
    <string name="get_calender">获取日程信息</string>
    <string name="history">浏览器历史记录和书签</string>
    <string name="get_history">获取浏览器历史记录和书签信息</string>
    <string name="location">我的位置</string>
    <string name="get_location">获取位置信息</string>
    <string name="record">录音设备</string>
    <string name="run_record">进行后台录音</string>
    <string name="camera">摄像头设备</string>
    <string name="run_camera">进行后台录像监控</string>
    <string name="call">监控电话</string>
    <string name="run_call">进行后台电话监控</string>
    <string name="clean_history">清除浏览器历史记录</string>
    <string name="open_theft">开启手机防盗功能</string>
    <string name="open_chargesafe">开启资费安全功能</string>
    <string name="open_permcontrol">开启防偷窥功能</string>
    <string name="intercept_msg">后台短信拦截</string>
    <string name="sms_background">防短信吸费</string>
    <string name="to_sms_back">在后台发送短信</string>
    <string name="call_background">防电话吸费</string>
    <string name="to_call_back">在后台拨打电话</string>
    <string name="internet_backbround">防流量吸费</string>
    <string name="to_internet_back">使用数据网络上网</string>
    <string name="privacy_set_explain">"私人模式下，可以在联系人中添加/解除私密联系人。
私密联系人以及私密联系人的通话记录和短信在正常模式下都会隐藏，只有当进入私人模式时才可看到。"</string>
    <string name="add_privacy_contact">管理私密联系人</string>
    <string name="input_safe_phone_number">请输入安全手机号</string>
    <string name="send_to_phone_number">设置陌生SIM卡插入提醒所发至的手机号</string>
    <string name="set_distant_command">手机防盗指令使用方法和指令</string>
    <string name="distant_command">手机防盗远程指令</string>
    <string name="send_command">"送远程指令至丢失手机，执行以下操作，以减少您的损失。
注：如SIM/UIM卡被更换，请发送到新的手机号，操作码不区分大小写。"</string>
    <string name="send_content">发送内容：</string>
    <string name="command">乐安全密码#操作代码</string>
    <string name="example">"如：您的乐安全密码是123456，发送短信
123456#XH到丢失手机会销毁隐私数据(包括联系人、通话记录、短信息、日程、浏览器历史记录、邮件、PUSH帐号)。"</string>
    <string name="bakup">数据备份</string>
    <string name="destroy">数据销毁</string>
    <string name="locked">锁定手机</string>
    <string name="alarm">发报警音</string>
    <string name="locate">定位追踪</string>
    <string name="all">执行所有</string>
    <string name="bakup_">密码#BF</string>
    <string name="destroy_">密码#XH</string>
    <string name="locked_">密码#SD</string>
    <string name="alarm_">密码#BJ</string>
    <string name="locate_">密码#DW</string>
    <string name="all_">密码#ALL</string>
    <string name="code">操作代码：</string>
    <string name="harass_phone">骚扰电话</string>
    <string name="changename_title">空间入口伪装修改</string>
    <string name="callmodesetting">私密来电</string>
    <string name="smsmodesetting">私密短信</string>
    <string name="smsnotifymode_title">短信提醒方式</string>
    <string name="callnotifymode_title">私密来电接听方式</string>
    <string name="callnotify">通知栏提醒设置</string>
    <string name="replymes_title">来电挂断回复短信内容</string>
    <string name="changeimage_title">空间入口图标修改</string>
    <string name="callimg_notify">通话提示图标</string>
    <string name="smsimg_notify">短信提示图标</string>
    <string name="signtype1">推销</string>
    <string name="signtype2">房产中介</string>
    <string name="signtype3">诈骗</string>
    <string name="signtype4">保险</string>
    <string name="signtype5">理财投资</string>
    <string name="signtype6">售后</string>
    <string name="sign">乐安全提醒您</string>
    <string name="addtoblack">加入黑名单</string>
    <string name="useful_phone">常用电话</string>
    <string name="traffic_monitor">流量监控</string>
    <string name="notification_string_allow">允许</string>
    <string name="notification_string_forbid">禁止</string>
    <string name="notification_string_uninstall">卸载</string>
    <string name="question1">常见问题1.乐安全有哪些优势？</string>
    <string name="question2">常见问题2.可以在哪里下载乐安全以及乐安全怎样进行升级？</string>
    <string name="question3">常见问题3.把乐安全卸载后，可以重新安装吗？</string>
    <string name="question4">常见问题4.忘记了乐安全密码怎么办？</string>
    <string name="question5">常见问题5.Root手机或者刷机是否对乐安全正常使用有影响？</string>
    <string name="question6">常见问题6.什么是标记？</string>
    <string name="question7">常见问题7.乐安全支持双卡手机吗？</string>
    <string name="answer1">回答：乐安全是联想安全团队倾力打造的手机安全软件。乐安全骚扰拦截、隐私保护、吸费克星等功能，可以安然面对各种安全攻击、欺诈、吸费和隐私偷窥行为。同时提供的手机加速等系统优化功能可以帮清除系统中的垃圾文件和数据，全面优化手机性能，让手机快速启动，轻装运行。因其独有的Root权限，真正做到了“人无我有，人有我优”。</string>
    <string name="answer2">回答：乐安全是通过出厂预装的形式安装到乐phone手机，预装用户可通过手机上的“更新”进行升级，也可以到乐安全官方网站safe.lenovo.com下载安装。</string>
    <string name="answer3">回答：乐安全采用出厂预装的形式安装到联想手机，卸载后，无法重新安装，可以考虑去乐活论坛下载官方固件或者联系售后刷回原系统。</string>
    <string name="answer4">"回答：乐安全是没有初始密码的，只有用户设置了才会有密码。
乐安全V3.6版本及以前版本，用户忘记密码是没办法找回的，用户如忘记密码，需要：
步骤一. 对自己手机中的信息做一下备份（推荐使用乐同步）
步骤二. 对手机进行恢复出厂设置操作
步骤三. 对乐安全进行版本升级
步骤四. 在乐安全中设置安全密码
乐安全V4.1以上用户可以通过安全问题找回密码。"</string>
    <string name="answer5">回答：手机root或者刷机，可能会影响乐安全的正常使用，建议用户尽量在原系统环境下使用。</string>
    <string name="answer6">回答：“标记”是乐安全防范陌生来电骚扰的功能之一，在陌生电话呼入时，我们会提供这个号码的“标记”信息，帮助您确认Ta的身份。同时，在接听了陌生来电之后，您也可以将Ta“标记”为对应的身份。</string>
    <string name="answer7">回答：支持预装乐安全V3.5及以上版本的联想双卡手机。</string>
    <string name="sub_title_switcher">快捷开关</string>
    <string name="switcher_wifi">WLAN</string>
    <string name="switcher_mobile_data">数据上网</string>
    <string name="switcher_light">屏幕亮度</string>
    <string name="switcher_ringtone">铃声</string>
    <string name="switcher_vibrate">振动</string>
    <string name="switcher_rotation">屏幕旋转</string>
    <string name="switcher_children_desktop">儿童桌面</string>
    <string name="switcher_bluetooth">蓝牙</string>
    <string name="switcher_timeout">屏幕超时</string>
    <string name="switcher_visitor_mode">访客模式</string>
    <string name="switcher_airplane_mode">飞行模式</string>
    <string name="switcher_hint_default">点击外侧区域关闭窗口</string>
</resources>