<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:switcher="http://schemas.android.com/apk/res/com.lenovo.safecenter">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/text_switcher_title" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/sub_title_switcher" />
        <include layout="@layout/assist_divider_horizontal_title" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_wifi" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_wifi" switcher:switcher_label="@string/switcher_wifi" />
            <include layout="@layout/assist_divider_vertical_top" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_mobile_data" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_mobile_data" switcher:switcher_label="@string/switcher_mobile_data" />
            <include layout="@layout/assist_divider_vertical_top" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_ringtone" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_ringtone" switcher:switcher_label="@string/switcher_ringtone" />
            <include layout="@layout/assist_divider_vertical_top" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_vibrate" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_vibrate" switcher:switcher_label="@string/switcher_vibrate" />
        </LinearLayout>
        <include layout="@layout/assist_divider_horizontal" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_light" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_switcher_light_auto" switcher:switcher_label="@string/switcher_light" />
            <include layout="@layout/assist_divider_vertical_middle" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_rotation" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_rotation" switcher:switcher_label="@string/switcher_rotation" />
            <include layout="@layout/assist_divider_vertical_middle" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_timeout" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_switcher_timeout_30s" switcher:switcher_label="@string/switcher_timeout" />
            <include layout="@layout/assist_divider_vertical_middle" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_bluetooth" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_bluetooth" switcher:switcher_label="@string/switcher_bluetooth" />
        </LinearLayout>
        <include layout="@layout/assist_divider_horizontal" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip">
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_traffic_monitor" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_traffic_monitor" switcher:switcher_label="@string/traffic_monitor" />
            <include layout="@layout/assist_divider_vertical_bottom" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_children_desktop" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_children_desktop" switcher:switcher_label="@string/switcher_children_desktop" />
            <include layout="@layout/assist_divider_vertical_bottom" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_guest_mode" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_visitor_mode" switcher:switcher_label="@string/switcher_visitor_mode" />
            <include layout="@layout/assist_divider_vertical_bottom" />
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@id/switch_airplane_mode" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" switcher:switcher_icon="@drawable/assist_selector_switcher_airplane_mode" switcher:switcher_label="@string/switcher_airplane_mode" />
        </LinearLayout>
        <include layout="@layout/assist_divider_horizontal" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="39.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_switcher_hint_off" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@id/msg_hint" android:duplicateParentState="true" android:layout_width="220.0dip" android:layout_height="26.0dip" android:layout_marginTop="3.0dip" android:layout_marginBottom="2.0dip" android:text="@string/switcher_hint_default" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>