<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/title_bg" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <ImageView android:id="@id/sign_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="2.0dip" android:layout_toLeftOf="@id/sign_title" android:layout_centerVertical="true" />
        <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/sign_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/DialogText.Title" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/content" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <TextView android:textSize="16.0dip" android:id="@id/message" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/charge_safe_summery" style="@style/DialogText" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/dialog_bg_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0dip" android:gravity="center" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/harass_phone" style="@style/DialogText" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sign_txt1" android:background="@drawable/signtype_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/signtype1" style="@style/DialogText" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sign_txt2" android:background="@drawable/signtype_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/signtype2" style="@style/DialogText" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sign_txt3" android:background="@drawable/signtype_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/signtype3" style="@style/DialogText" />
            <CheckBox android:textSize="14.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/signblack_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addtoblack" style="@style/DialogText" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_weight="1.0">
            <TextView android:textSize="18.0dip" android:gravity="center" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/useful_phone" style="@style/DialogText" />
            <TextView android:textSize="22.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sign_txt4" android:background="@drawable/signtype_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/signtype4" style="@style/DialogText" />
            <TextView android:textSize="22.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sign_txt5" android:background="@drawable/signtype_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/signtype5" style="@style/DialogText" />
            <TextView android:textSize="22.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sign_txt6" android:background="@drawable/signtype_normal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/signtype6" style="@style/DialogText" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/button" android:background="@drawable/dialog_bg_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/black1" android:gravity="center" android:id="@id/positiveButton" android:background="@drawable/signbtn_bg" android:layout_width="0.0dip" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginBottom="6.0dip" android:text="@string/sign" android:layout_weight="1.0" />
        <TextView android:textSize="16.0dip" android:textColor="@color/black1" android:gravity="center" android:id="@id/negativeButton" android:background="@drawable/signbtn_bg" android:layout_width="0.0dip" android:layout_height="45.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="6.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>